--- a/lab_14/src/app/app.component.html
+++ b/lab_14/src/app/app.component.html
@@ -1,6 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
+      <p>
+        <a routerLink="signup">Sign up</a>
+      </p>
+      <p>
+        <a routerLink="signin">Sign in</a>
+      </p>
       <router-outlet></router-outlet>
       <hr>
     </div>
