--- a/lab_14/src/app/signin/signin.component.html
+++ b/lab_14/src/app/signin/signin.component.html
@@ -1,10 +1,8 @@
 <h1> Please Login </h1>
 <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
-  <div formGroupName="userData">
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" id="username" formControlName="username">
-    </div>
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" class="form-control" id="username" formControlName="username">
   </div>
 
   <div class="form-group">
@@ -12,11 +10,11 @@
     <input type="password" class="form-control" id="password" formControlName="password">
   </div>
 
-  <div class="form-group">
-    <label>
-      <input type="radio" formControlName="remember"> Remember me
-    </label>
-  </div>
+  <!--<div class="form-group">-->
+    <!--<label>-->
+      <!--<input type="radio" formControlName="remember"> Remember me-->
+    <!--</label>-->
+  <!--</div>-->
 
   <button type="submit" class="btn btn-primary" [disabled]="!myForm.valid">Submit</button>
 </form>
