--- a/lab_14/src/app/signup/signup.component.html
+++ b/lab_14/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-<h1> Sign up </h1>
+<h1> Sign up For this</h1>
 <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <input type="text" class="form-control" id="firstname" formControlName="firstname" placeholder="First name">
@@ -12,13 +12,15 @@
     <input type="text" class="form-control" id="email" formControlName="email" placeholder="Email">
   </div>
 
-  <div class="form-group">
-    <input type="password" class="form-control" id="password" formControlName="password" placeholder="Password">
-  </div>
+  <div formGroupName="userPassword">
+    <div class="form-group">
+      <input type="password" class="form-control" id="password" formControlName="password" placeholder="Password">
+    </div>
 
-  <div class="form-group">
-    <input type="password" class="form-control" id="confirmPassword" formControlName="confirmPassword"
-           placeholder="Confirm Password">
+    <div class="form-group">
+      <input type="password" class="form-control" id="confirmPassword" formControlName="confirmPassword"
+             placeholder="Confirm Password">
+    </div>
   </div>
 
   <button type="submit" class="btn btn-primary" [disabled]="!myForm.valid">Submit</button>
